--- a/app/src/main/res/layout/activity_succeed.xml
+++ b/app/src/main/res/layout/activity_succeed.xml
@@ -62,6 +62,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:onClick="onClickButtonPerson"
                     app:srcCompat="@drawable/portfilo" />
             </LinearLayout>
 
