add Quit function to the button

--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -238,7 +238,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:onClick="onClickButtonMain"
+                android:onClick="onClickButtonQuit"
                 android:src="@drawable/out_w" />
         </LinearLayout>
     </FrameLayout>
