--- a/app/src/main/res/layout/activity_detail_data.xml
+++ b/app/src/main/res/layout/activity_detail_data.xml
@@ -124,44 +124,45 @@
                 android:id="@+id/layout_levelBg"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_weight="0.5"
                 android:layout_marginStart="25dp"
-                android:layout_marginEnd="45dp"
                 android:layout_marginTop="500dp"
-                android:orientation="horizontal">
+                android:layout_marginEnd="45dp"
+                android:layout_weight="0.5"
+                android:orientation="horizontal"
+                android:visibility="invisible">
 
                 <TextView
                     android:id="@+id/textView9"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:layout_marginEnd="10dp"
-                    android:text="0"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:textColor="@color/thirdColor"/>
+                    android:text="0"
+                    android:textColor="@color/thirdColor" />
 
                 <View
                     android:id="@+id/view18"
                     android:layout_width="0dp"
                     android:layout_height="3dp"
+                    android:layout_gravity="center"
                     android:layout_weight="5"
-                    android:background="@color/thirdColor"
-                    android:layout_gravity="center"/>
+                    android:background="@color/thirdColor" />
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:layout_marginStart="10dp"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/imageView14"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_weight="3"
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="2dp"
+                        android:layout_weight="3"
                         app:srcCompat="@drawable/reset" />
 
                     <TextView
@@ -171,8 +172,8 @@
                         android:layout_weight="2"
                         android:text="rest"
                         android:textAlignment="center"
-                        android:textSize="14sp"
-                        android:textColor="@color/thirdColor"/>
+                        android:textColor="@color/thirdColor"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
 
@@ -182,32 +183,33 @@
                 android:id="@+id/layout_levelBt"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
-                android:layout_weight="0.5"
                 android:layout_marginStart="25dp"
-                android:layout_marginEnd="30dp"
                 android:layout_marginTop="490dp"
-                android:orientation="horizontal">
+                android:layout_marginEnd="30dp"
+                android:layout_weight="0.5"
+                android:orientation="horizontal"
+                android:visibility="invisible">
 
                 <View
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_marginEnd="10dp"/>
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="1" />
 
                 <ImageView
                     android:id="@+id/levelBar"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
-                    android:layout_weight="6"
                     android:layout_gravity="center"
                     android:layout_marginStart="0dp"
-                    android:src="@drawable/bar"/>
+                    android:layout_weight="6"
+                    android:src="@drawable/bar" />
 
                 <View
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_marginStart="10dp"/>
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="1" />
 
             </LinearLayout>
 
