--- a/app/src/main/res/layout/activity_detail_data.xml
+++ b/app/src/main/res/layout/activity_detail_data.xml
@@ -129,6 +129,7 @@
                 android:layout_marginEnd="45dp"
                 android:layout_weight="0.5"
                 android:orientation="horizontal"
+                android:tag="inVisible"
                 android:visibility="invisible">
 
                 <TextView
@@ -188,6 +189,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_weight="0.5"
                 android:orientation="horizontal"
+                android:tag="inVisible"
                 android:visibility="invisible">
 
                 <View
@@ -301,8 +303,10 @@
                         android:layout_weight="6">
 
                         <LinearLayout
+                            android:id="@+id/items"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
+                            android:onClick="showBar"
                             android:orientation="horizontal">
 
 
