create  and add functions to the buttons

--- a/app/src/main/res/layout/activity_effect.xml
+++ b/app/src/main/res/layout/activity_effect.xml
@@ -43,6 +43,7 @@
                     android:layout_marginTop="3dp"
                     android:layout_marginBottom="3dp"
                     android:layout_weight="1"
+                    android:onClick="onClickButtonDeal"
                     app:srcCompat="@drawable/back" />
 
                 <View
@@ -81,7 +82,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    app:srcCompat="@drawable/okay_b" />
+                    android:onClick="onClickButtonDeal"
+                    app:srcCompat="@drawable/continue_purple" />
 
                 <View
                     android:layout_width="0dp"
@@ -128,6 +130,7 @@
                 android:layout_marginStart="25dp"
                 android:layout_marginEnd="45dp"
                 android:layout_marginTop="460dp"
+                android:visibility="invisible"
                 android:orientation="horizontal">
 
                 <TextView
@@ -158,6 +161,7 @@
                 android:layout_marginStart="25dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginTop="450dp"
+                android:visibility="invisible"
                 android:orientation="horizontal">
 
                 <View
