--- a/app/src/main/res/layout/activity_hue.xml
+++ b/app/src/main/res/layout/activity_hue.xml
@@ -44,6 +44,7 @@
                     android:layout_marginTop="3dp"
                     android:layout_marginBottom="3dp"
                     android:layout_weight="1"
+                    android:onClick="onClickButtonDeal"
                     app:srcCompat="@drawable/back" />
 
                 <View
@@ -82,7 +83,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    app:srcCompat="@drawable/okay_b" />
+                    android:onClick="onClickButtonDeal"
+                    app:srcCompat="@drawable/continue_purple" />
 
                 <View
                     android:layout_width="0dp"
@@ -196,6 +198,7 @@
                     android:paddingBottom="20dp">
 
                     <LinearLayout
+                        android:id="@+id/more"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_marginEnd="20dp"
@@ -318,16 +321,17 @@
         android:layout_height="match_parent"
         android:alpha="0.75"
         android:background="@color/black"
-        android:visibility="gone"
-        tools:visibility="invisible" />
+        android:tag="inVisible"
+        android:visibility="invisible" />
 
     <LinearLayout
+        android:id="@+id/colorBlock"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:visibility="invisible"
-        tools:layout_editor_absoluteX="40dp"
-        tools:visibility="invisible">
+        android:tag="inVisible"
+        tools:layout_editor_absoluteX="40dp">
 
         <View
             android:layout_width="match_parent"
@@ -515,6 +519,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginRight="10dp"
                         android:layout_weight="1"
+                        android:onClick="hideBar"
                         app:srcCompat="@drawable/cancel" />
 
                     <ImageView
