add the function to the goBack_button

--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -43,6 +43,7 @@
                     android:layout_marginTop="3dp"
                     android:layout_marginBottom="3dp"
                     android:layout_weight="1"
+                    android:onClick="onClickButtonDeal"
                     app:srcCompat="@drawable/back" />
 
                 <View
