--- a/app/src/main/res/layout/activity_hue.xml
+++ b/app/src/main/res/layout/activity_hue.xml
@@ -322,16 +322,18 @@
         android:alpha="0.75"
         android:background="@color/black"
         android:tag="inVisible"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        tools:visibility="visible" />
 
     <LinearLayout
         android:id="@+id/colorBlock"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="invisible"
         android:tag="inVisible"
-        tools:layout_editor_absoluteX="40dp">
+        android:visibility="invisible"
+        tools:layout_editor_absoluteX="40dp"
+        tools:visibility="visible">
 
         <View
             android:layout_width="match_parent"
@@ -360,12 +362,14 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imageView17"
+                        android:id="@+id/bibt"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_marginEnd="10dp"
                         android:layout_weight="1"
-                        app:srcCompat="@drawable/bibt" />
+                        android:tag="B"
+                        android:onClick="onClickColorTypeChanged"
+                        android:src="@drawable/bibt" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="0dp"
@@ -380,7 +384,8 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/bicolorbar" />
+                            app:srcCompat="@drawable/bicolorbar"
+                            android:visibility="invisible"/>
 
 
                         <LinearLayout
@@ -390,7 +395,8 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:visibility="visible">
 
 
                             <ImageView
@@ -419,7 +425,8 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:visibility="invisible">
 
 
                             <ImageView
@@ -462,7 +469,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/MWhite"
+                            android:id="@+id/colorBlock1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="10dp"
@@ -474,7 +481,7 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/MRed"
+                            android:id="@+id/colorBlock2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
