--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -171,7 +171,8 @@
                             android:layout_height="0dp"
                             android:layout_weight="4"
                             android:scaleType="fitXY"
-                            android:src="" />
+                            android:src="@drawable/bird_paint"
+                            android:visibility="invisible"/>
 
                         <TextView
                             android:id="@+id/f2_2_Name"
